# srt_translator

./: Cargo.toml  Justfile  LICENSE  README.md
.github/workflows/: build.yml  ci.yml
docs/: basic_notes.md  managing_projects.md  resources.md
examples/: small.srt  small_translated.srt
src/: main.rs  openai.rs  prompter.rs  settings.rs  translator.rs
src/loader/: mod.rs  srt_loader.rs
