[package]
name = "srt_translator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-openai = "0.10.2"
clap = { version = "4.2.1", features = ["derive"] }
tiktoken-rs = "0.3.3"
tokio = { version = "1.27.0", features = ["full"] }