[package]
name = "srt_translator"
version = "0.1.2"
edition = "2021"
rust-version = "1.67"
authors = ["Weiren Lan<miblue119@gmail.com>"]
categories = ["development-tools"]
keywords = ["openai", "ai", "gpt"]
description = "A srt translator using OpenAI GPT API"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/MIBlue119/srt_translator"
repository = "https://github.com/MIBlue119/srt_translator"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-openai = "0.10.2"
clap = { version = "4.2.1", features = ["derive"] }
tiktoken-rs = "0.3.3"
tokio = { version = "1.27.0", features = ["full"] }